# OOP5

./: CMakeLists.txt  main.cpp
include/: functions.h
src/: functions.cpp
tests/: test.cpp
